--- a/css/styles.css
+++ b/css/styles.css
@@ -495,7 +495,6 @@ body {
 }
 
 .add-box {
-  margin-right: 93px;
   padding-top: 72px;
   padding-bottom: 100px;
 }
@@ -540,6 +539,7 @@ body {
 .subscribe-form {
   padding-top: 72px;
   padding-bottom: 94px;
+  margin-left: auto;
 }
 .subscribe-text {
   font-weight: 700;
@@ -574,7 +574,6 @@ body {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  outline: none;
 }
 
 .btn-subscribe {
@@ -686,6 +685,7 @@ body {
   width: 100%;
   min-height: 40px;
   padding: 12px 12px 12px 42px;
+  outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
@@ -709,6 +709,7 @@ body {
   min-height: 120px;
   padding: 12px 16px;
   margin-bottom: 20px;
+  outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
@@ -751,13 +752,16 @@ body {
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .icon-check {
   fill: transparent;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.agree-input:focus + .agree-text span {
+  outline: 2px solid var(--accent-color);
+}
 .agree-input:checked + .agree-text span {
   background-color: var(--accent-color);
   border: none;
@@ -770,6 +774,7 @@ body {
 .agree-link {
   color: var(--accent-color);
   margin-left: 3px;
+  text-decoration-skip-ink: none;
 }
 .modal-btn {
   font-weight: 700;
