--- a/css/styles.css
+++ b/css/styles.css
@@ -569,7 +569,7 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   background-color: transparent;
-
+  cursor: pointer;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -690,6 +690,7 @@ body {
   box-sizing: border-box;
   border-radius: 4px;
   background-color: transparent;
+  cursor: pointer;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
@@ -710,6 +711,7 @@ body {
   padding: 12px 16px;
   margin-bottom: 20px;
   outline: none;
+  cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
